--- a/overlays/staging/kustomization.yaml
+++ b/overlays/staging/kustomization.yaml
@@ -4,5 +4,5 @@ resources:
   - ../../base
 patchesStrategicMerge:
   - patch-replicas.yaml
-namePrefix: dev-
+namePrefix: stg-
 namespace: kustomziation-dev
