--- a/overlays/staging/kustomization.yaml
+++ b/overlays/staging/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
 patchesStrategicMerge:
   - patch-replicas.yaml
 namePrefix: stg-
-namespace: kustomziation-dev
+namespace: kustomziation-stg
