--- a/overlays/development/kustomization.yaml
+++ b/overlays/development/kustomization.yaml
@@ -6,5 +6,22 @@ patchesStrategicMerge:
   - patch-replicas.yaml
 namePrefix: dev-
 namespace: kustomziation-dev
-commonLabels:
-  environment: development
+transformers:
+  - |-
+    apiVersion: builtin
+    kind: LabelTransformer
+    metadata:
+      name: commonLabelsTransformer
+    labels:
+      environment: development
+      app.kubernetes.io/version: 1.2.6
+
+    fieldSpecs:
+    - path: metadata/labels
+      create: true
+    - path: spec/template/metadata/labels
+      create: true
+      kind: Deployment
+    - path: spec/template/metadata/labels
+      create: true
+      kind: Servcie
